--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,6 @@
 [tox]
 envlist =py27,py33,py34
 [testenv]
-deps=pytest
+deps=pytest,invoke
 commands=
-    python setup.py test
-
-[flake8]
-ignore = E501,E127,E128
-max-line-length = 90
+    invoke test
