Test against py35

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
-# Config file for automatic testing at travis-ci.org
-
 language: python
+sudo: false
 
 python:
+  - "3.5"
   - "3.4"
   - "3.3"
   - "2.7"
