--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,10 @@
 [tox]
-envlist =py27,py33,py34,py35
+envlist =py27,py33,py34,py35,py36
 [testenv]
-deps=pytest,invoke
+deps=
+    pytest
+    invoke
+    flake8
+    IPython<6
 commands=
     invoke test
