Install IPython<6 on older python; IPython 6.3.1 on newer python

--- a/tox.ini
+++ b/tox.ini
@@ -2,9 +2,6 @@
 envlist =py27,py35,py36
 [testenv]
 deps=
-    pytest
-    invoke
-    flake8
-    IPython<6
+  -rdev-requirements.txt
 commands=
     invoke test
