Include LICENSE in the wheel

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,8 @@
-[wheel]
+[metadata]
+# This includes the license file in the wheel.
+license_file = LICENSE
+
+[bdist_wheel]
 universal = 1
 
 [flake8]
