--- a/setup.cfg
+++ b/setup.cfg
@@ -8,4 +8,4 @@ universal = 1
 [flake8]
 ignore = E127,E128,E265,E302,N803,N804,N806,E266,E731,E305
 max-line-length = 100
-exclude = .git,.ropeproject,.tox,docs,.git,tests/,examples/,build,setup.py,env,venv,sandbox
+exclude = .git,.ropeproject,.tox,docs,.git,build,env,venv
