--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,30 @@
 [tox]
-envlist =py27,py35,py36
+envlist = lint,py27,py35,py36,py37,docs
+
 [testenv]
-deps=
-  -rdev-requirements.txt
-commands=
-    invoke test
+extras = tests
+commands = pytest -s {posargs}
+passenv = HOME SHELL
+
+[testenv:lint]
+extras = lint
+commands = flake8 .
+
+[testenv:docs]
+deps = -rdocs/requirements.txt
+extras =
+commands = sphinx-build docs/ docs/_build {posargs}
+
+; Below tasks are for development only (not run in CI)
+
+[testenv:watch-docs]
+deps =
+  -rdocs/requirements.txt
+  sphinx-autobuild
+extras =
+commands = sphinx-autobuild --open-browser docs/ docs/_build {posargs} -z doitlive
+
+[testenv:watch-readme]
+deps = restview
+skip_install = true
+commands = restview README.rst
