--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,27 @@
 language: python
 sudo: false
 cache: pip
-python:
-- '3.6'
-- '3.5'
-- '2.7'
-install:
-- pip install -r dev-requirements.txt
-script: invoke test --lint
 
+install: travis_retry pip install -U tox
+
+script: tox
 jobs:
+  fast_finish: true
+
   include:
+  - { python: '3.6', env: TOXENV=lint }
+  - { python: '2.7', env: TOXENV=py27 }
+  - { python: '3.5', env: TOXENV=py35 }
+  - { python: '3.6', env: TOXENV=py36 }
+  - { python: '3.7', env: TOXENV=py37, dist: xenial, sudo: required }
+  - { python: '3.6', env: TOXENV=docs }
+
   - stage: PyPI Release
     if: tag IS present
     python: "3.6"
     env: []
-    # Override install and script to no-ops
-    install: true
-    script: echo "Releasing to PyPI..."
+    install: skip
+    script: skip
     deploy:
       provider: pypi
       user: sloria
