--- a/setup.cfg
+++ b/setup.cfg
@@ -9,3 +9,6 @@ universal = 1
 ignore = E127,E128,E265,E302,N803,N804,N806,E266,E731,E305,W504
 max-line-length = 100
 exclude = .git,.ropeproject,.tox,docs,.git,build,env,venv
+
+[tool:pytest]
+addopts = -s
