Use black and pre-commit

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,9 +6,11 @@ license_file = LICENSE
 universal = 1
 
 [flake8]
-ignore = E127,E128,E265,E302,N803,N804,N806,E266,E731,E305,W504
+ignore = E203, E266, E501, W503, E302, W504
 max-line-length = 100
-exclude = .git,.ropeproject,.tox,docs,.git,build,env,venv
+max-complexity = 18
+select = B,C,E,F,W,T4,B9
+exclude = .git,.ropeproject,.tox,build,env,venv,__pycache__
 
 [tool:pytest]
 addopts = -s
