--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ passenv = HOME SHELL
 
 [testenv:lint]
 extras = lint
-commands = flake8 .
+commands = pre-commit run --all-files --show-diff-on-failure
 
 [testenv:docs]
 deps = -rdocs/requirements.txt
