Only install pre-commit in lint env
Committed via https://github.com/asottile/all-repos

--- a/tox.ini
+++ b/tox.ini
@@ -7,8 +7,9 @@ commands = pytest -s {posargs}
 passenv = HOME SHELL
 
 [testenv:lint]
-extras = lint
-commands = pre-commit run --all-files --show-diff-on-failure
+deps = pre-commit~=1.14
+skip_install = true
+commands = pre-commit run --all-files
 
 [testenv:docs]
 deps = -rdocs/requirements.txt
