Update to black's recommended flake8 config
https://github.com/ambv/black/blob/master/.flake8

Committed via https://github.com/asottile/all-repos

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,11 +6,10 @@ license_file = LICENSE
 universal = 1
 
 [flake8]
-ignore = E203, E266, E501, W503, E302, W504
-max-line-length = 100
+ignore = E203, E266, E501, W503
+max-line-length = 80
 max-complexity = 18
 select = B,C,E,F,W,T4,B9
-exclude = .git,.ropeproject,.tox,build,env,venv,__pycache__
 
 [tool:pytest]
 addopts = -s
