--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,8 +5,8 @@ repos:
   - id: black
     exclude: docopt.py
     language_version: python3.6
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v2.1.0
+- repo: https://gitlab.com/pycqa/flake8
+  rev: 3.7.4
   hooks:
   - id: flake8
 - repo: https://github.com/asottile/blacken-docs
