--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+dist: xenial
 cache: pip
 
 install: travis_retry pip install -U tox
@@ -12,7 +13,7 @@ jobs:
   - { python: '2.7', env: TOXENV=py27 }
   - { python: '3.5', env: TOXENV=py35 }
   - { python: '3.6', env: TOXENV=py36 }
-  - { python: '3.7', env: TOXENV=py37, dist: xenial }
+  - { python: '3.7', env: TOXENV=py37 }
   - { python: '3.6', env: TOXENV=docs }
 
   - stage: PyPI Release
