--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,7 @@ repos:
   hooks:
   - id: flake8
 - repo: https://github.com/asottile/blacken-docs
-  rev: v1.3.0
+  rev: v1.5.0-1
   hooks:
   - id: blacken-docs
     additional_dependencies: [black==19.10b0]
