--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,7 @@ repos:
   rev: 3.7.9
   hooks:
   - id: flake8
+    additional_dependencies: ['flake8-bugbear==20.1.2; python_version >= "3.5"']
 - repo: https://github.com/asottile/blacken-docs
   rev: v1.3.0
   hooks:
