--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,12 +6,12 @@ repos:
     exclude: docopt.py
     language_version: python3
 - repo: https://gitlab.com/pycqa/flake8
-  rev: 3.7.9
+  rev: 3.8.1
   hooks:
   - id: flake8
     additional_dependencies: ['flake8-bugbear==20.1.2; python_version >= "3.5"']
 - repo: https://github.com/asottile/blacken-docs
-  rev: v1.5.0-1
+  rev: v1.7.0
   hooks:
   - id: blacken-docs
     additional_dependencies: [black==19.10b0]
