Don't use raw mode in CI

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,9 @@ resources:
       name: sloria/azure-pipeline-templates
       ref: refs/heads/sloria
 
+variables:
+  CI: "true"
+
 jobs:
 - template: job--python-tox.yml@sloria
   parameters:
