--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = lint,py27,py35,py36,py37,py38,docs
 [testenv]
 extras = tests
 commands = pytest -s {posargs}
-passenv = HOME SHELL
+passenv = HOME SHELL CI
 
 [testenv:lint]
 deps = pre-commit~=1.14
