Fix watch-docs tox environment
Committed via https://github.com/asottile/all-repos

--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ deps =
   -rdocs/requirements.txt
   sphinx-autobuild
 extras =
-commands = sphinx-autobuild --open-browser docs/ docs/_build {posargs} -z doitlive
+commands = sphinx-autobuild --open-browser docs/ docs/_build {posargs} --watch doitlive
 
 [testenv:watch-readme]
 deps = restview
