Test against Python 3.9

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ variables:
 jobs:
 - template: job--python-tox.yml@sloria
   parameters:
-    toxenvs: [lint, py27, py36, py37, py38]
+    toxenvs: [lint, py27, py36, py37, py38, py39]
     os: linux
 - template: job--pypi-release.yml@sloria
   parameters:
