--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,11 @@ repos:
   - id: black
     exclude: docopt.py
     language_version: python3
+    additional_dependencies:
+      # Python 2 shenanigans. Black v20-21 is not compatible
+      # with click 8. But Black v22 is not compatible with Python 2.
+      - "click<8"
+
 - repo: https://gitlab.com/pycqa/flake8
   rev: 3.8.3
   hooks:
