Pass DOITLIVE_INTERPRETER to toxified tests

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ deps:
 
 extras = tests
 commands = pytest -s {posargs}
-passenv = HOME SHELL CI
+passenv = HOME SHELL CI DOITLIVE_INTERPRETER
 
 [testenv:lint]
 deps = pre-commit~=1.14
