--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,8 @@
 [tox]
-envlist = lint,docs,py27-ipython5,py35-ipython{5,6,7},py36-ipython{5,6,7},py37-ipython{6,7},py3{8,9,10}-ipython{7,8}
+envlist = lint,docs,py37-ipython{6,7},py3{8,9,10}-ipython{7,8}
 
 [testenv]
 deps:
-  ipython5: IPython>=5,<6
   ipython6: IPython>=6,<7
   ipython7: IPython>=7,<8
   ipython8: IPython>=8
@@ -13,7 +12,7 @@ commands = pytest -s {posargs}
 passenv = HOME SHELL CI DOITLIVE_INTERPRETER
 
 [testenv:lint]
-deps = pre-commit~=1.14
+deps = pre-commit~=2.20.0
 skip_install = true
 commands = pre-commit run --all-files
 
