--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,22 +1,21 @@
 repos:
+- repo: https://github.com/asottile/pyupgrade
+  rev: v2.37.3
+  hooks:
+  - id: pyupgrade
+    args: [--py37-plus]
 - repo: https://github.com/python/black
-  rev: 20.8b1
+  rev: 22.6.0
   hooks:
   - id: black
-    exclude: docopt.py
     language_version: python3
-    additional_dependencies:
-      # Python 2 shenanigans. Black v20-21 is not compatible
-      # with click 8. But Black v22 is not compatible with Python 2.
-      - "click<8"
-
 - repo: https://gitlab.com/pycqa/flake8
-  rev: 3.8.3
+  rev: 3.9.2
   hooks:
   - id: flake8
-    additional_dependencies: ['flake8-bugbear==20.1.2; python_version >= "3.5"']
+    additional_dependencies: ['flake8-bugbear==20.1.2']
 - repo: https://github.com/asottile/blacken-docs
-  rev: v1.8.0
+  rev: v1.12.1
   hooks:
   - id: blacken-docs
-    additional_dependencies: [black==20.8b1]
+    additional_dependencies: [black==22.6.0]
