--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,8 @@
 [tox]
-envlist = lint,docs,py37-ipython{6,7},py3{8,9,10}-ipython{7,8}
+envlist = lint,docs,py3{8,9,10,11}-ipython8
 
 [testenv]
 deps:
-  ipython6: IPython>=6,<7
-  ipython7: IPython>=7,<8
   ipython8: IPython>=8
 
 extras = tests
@@ -12,7 +10,7 @@ commands = pytest -s {posargs}
 passenv = HOME SHELL CI DOITLIVE_INTERPRETER
 
 [testenv:lint]
-deps = pre-commit~=2.20.0
+deps = pre-commit~=3.5
 skip_install = true
 commands = pre-commit run --all-files
 
