Update pre-commit and lint deps

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,10 +6,9 @@ license_files = LICENSE
 universal = 1
 
 [flake8]
-ignore = E203, E266, E501, W503
-max-line-length = 80
+max-line-length = 90
 max-complexity = 18
-select = B,C,E,F,W,T4,B9
+extend-ignore = E203, E266, E501, E731, B903
 
 [tool:pytest]
 addopts = -s
