--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,21 +1,21 @@
 repos:
 - repo: https://github.com/asottile/pyupgrade
-  rev: v2.37.3
+  rev: v3.15.0
   hooks:
   - id: pyupgrade
-    args: [--py37-plus]
+    args: [--py38-plus]
 - repo: https://github.com/python/black
-  rev: 22.6.0
+  rev: 23.12.1
   hooks:
   - id: black
     language_version: python3
-- repo: https://gitlab.com/pycqa/flake8
-  rev: 3.9.2
+- repo: https://github.com/pycqa/flake8
+  rev: 7.0.0
   hooks:
   - id: flake8
-    additional_dependencies: ['flake8-bugbear==20.1.2']
+    additional_dependencies: [flake8-bugbear==23.12.2]
 - repo: https://github.com/asottile/blacken-docs
-  rev: v1.12.1
+  rev: 1.16.0
   hooks:
   - id: blacken-docs
-    additional_dependencies: [black==22.6.0]
+    additional_dependencies: [black==23.12.1]
