Update docs builds and config

--- a/tox.ini
+++ b/tox.ini
@@ -15,17 +15,14 @@ skip_install = true
 commands = pre-commit run --all-files
 
 [testenv:docs]
-deps = -rdocs/requirements.txt
-extras =
+extras = docs
 commands = sphinx-build docs/ docs/_build {posargs}
 
 ; Below tasks are for development only (not run in CI)
 
 [testenv:watch-docs]
-deps =
-  -rdocs/requirements.txt
-  sphinx-autobuild
-extras =
+deps = sphinx-autobuild
+extras = docs
 commands = sphinx-autobuild --open-browser docs/ docs/_build {posargs} --watch doitlive
 
 [testenv:watch-readme]
