--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ deps:
 
 extras = tests
 commands = pytest -s {posargs}
+passenv = HOME,SHELL,CI,DOITLIVE_INTERPRETER
 
 [testenv:lint]
 deps = pre-commit~=3.5
