--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,19 +1,14 @@
 repos:
-- repo: https://github.com/asottile/pyupgrade
-  rev: v3.15.0
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.1.14
   hooks:
-  - id: pyupgrade
-    args: [--py38-plus]
-- repo: https://github.com/psf/black
-  rev: 23.12.1
+    - id: ruff
+    - id: ruff-format
+- repo: https://github.com/python-jsonschema/check-jsonschema
+  rev: 0.27.3
   hooks:
-  - id: black
-    language_version: python3
-- repo: https://github.com/pycqa/flake8
-  rev: 7.0.0
-  hooks:
-  - id: flake8
-    additional_dependencies: [flake8-bugbear==23.12.2]
+    - id: check-github-workflows
+    - id: check-readthedocs
 - repo: https://github.com/asottile/blacken-docs
   rev: 1.16.0
   hooks:
