--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,7 +1,10 @@
 name: build
 on:
   push:
+    branches: ["main"]
+    tags: ["*"]
   pull_request:
+
 jobs:
   tests:
     name: ${{ matrix.name }}
@@ -13,39 +16,61 @@ jobs:
           - { name: "3.8-ipython8", python: "3.8", tox: py38-ipython8 }
           - { name: "3.12-ipython8", python: "3.12", tox: py12-ipython8 }
     steps:
-      - uses: actions/checkout@v3.1.0
-      - uses: actions/setup-python@v4.3.0
+      - uses: actions/checkout@v4.0.0
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python }}
-      - run: python -m pip install --upgrade pip
+          allow-prereleases: true
       - run: python -m pip install tox
-      - run: python -m tox -e${{ matrix.tox }}
+      - run: python -m tox -e ${{ matrix.tox }}
+  build:
+    name: Build package
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      - name: Install pypa/build
+        run: python -m pip install build
+      - name: Build a binary wheel and a source tarball
+        run: python -m build
+      - name: Install twine
+        run: python -m pip install twine
+      - name: Check build
+        run: python -m twine check --strict dist/*
+      - name: Store the distribution packages
+        uses: actions/upload-artifact@v4
+        with:
+          name: python-package-distributions
+          path: dist/
   # this duplicates pre-commit.ci, so only run it on tags
   # it guarantees that linting is passing prior to a release
   lint-pre-release:
-    name: lint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3.1.0
-      - uses: actions/setup-python@v4.3.0
-        with:
-          python-version: "3.11"
-      - run: python -m pip install --upgrade pip
-      - run: python -m pip install tox
-      - run: python -m tox -elint
-  release:
-    needs: [tests, lint-pre-release]
-    name: PyPI release
     if: startsWith(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3.1.0
-      - uses: actions/setup-python@v4.3.0
-      - name: install requirements
-        run: python -m pip install build twine
-      - name: build dists
-        run: python -m build
-      - name: check package metadata
-        run: twine check dist/*
-      - name: publish
-        run: twine upload -u __token__ -p ${{ secrets.PYPI_API_TOKEN }} dist/*
+      - uses: actions/checkout@v4.0.0
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      - run: python -m pip install tox
+      - run: python -m tox -elint
+  publish-to-pypi:
+    name: PyPI release
+    if: startsWith(github.ref, 'refs/tags/')
+    needs: [build, tests, lint-pre-release]
+    runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/doitlive
+    permissions:
+      id-token: write
+    steps:
+      - name: Download all the dists
+        uses: actions/download-artifact@v4
+        with:
+          name: python-package-distributions
+          path: dist/
+      - name: Publish distribution to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
