--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,9 @@ tests = ["pytest", "IPython>=8"]
 docs = ["sphinx==7.2.6", "sphinx-issues==4.0.0"]
 dev = ["doitlive[tests]", "tox", "pre-commit~=3.6"]
 
+[project.scripts]
+doitlive = "doitlive.cli:cli"
+
 [build-system]
 requires = ["flit_core<4"]
 build-backend = "flit_core.buildapi"
