Update ruff config and address lint error

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ exclude = ["docs/_build/"]
 src = ["src"]
 fix = true
 show-fixes = true
-show-source = true
+output-format = "full"
 
 [tool.ruff.lint]
 ignore = ["E203", "E266", "E501", "E731"]
