--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
   "click>=8.0,<9",
   "click-completion>=0.3.1",
   "click-didyoumean>=0.0.3",
+  "opencv-python (>=4.11.0.86,<5.0.0.0)",
 ]
 
 [project.urls]
@@ -31,8 +32,8 @@ Source = "https://github.com/sloria/doitlive/"
 
 [project.optional-dependencies]
 tests = ["pytest", "IPython>=8"]
-docs = ["sphinx==8.1.3", "sphinx-issues==5.0.0"]
-dev = ["doitlive[tests]", "tox", "pre-commit>=3.6,<5.0"]
+# docs = ["sphinx==8.1.3", "sphinx-issues==5.0.0"]
+# dev = ["doitlive[tests]", "tox", "pre-commit>=3.6,<5.0"]
 
 [project.scripts]
 doitlive = "doitlive.cli:cli"
