--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
-envlist = lint,docs,py3{9,10,11,12,13}-ipython8
+envlist = lint,docs,py3{9,10,11,12,13}-ipython9
 
 [testenv]
 deps:
-  ipython8: IPython>=8
+  ipython9: IPython>=9,<10
 
 extras = tests
 commands = pytest -s {posargs}
