--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,9 @@
 [tox]
-envlist = lint,docs,py3{9,10,11,12,13}-ipython9
+envlist = lint,docs,py3{10,11,12,13,14}-ipython{8,9}
 
 [testenv]
 deps:
+  ipython8: IPython>=8,<9
   ipython9: IPython>=9,<10
 
 extras = tests
