Fix Ipython 9 support; drop Python 3.9; test Python 3.14 (#314)
* Fix compatibility with Ipython 9

* Drop Python 3.9; test against 3.14

* fix test

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,10 @@
 [tox]
-envlist = lint,docs,py3{9,10,11,12,13}-ipython8
+envlist = lint,docs,py3{10,11,12,13,14}-ipython{8,9}
 
 [testenv]
 deps:
-  ipython8: IPython>=8
+  ipython8: IPython>=8,<9
+  ipython9: IPython>=9,<10
 
 extras = tests
 commands = pytest -s {posargs}
